--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,18 @@ header h1 {
   color: #2c203d;
 }
 
+.answer button.correct {
+  /* background: linear-gradient(180deg, #a1fa61 0%, #52d482 100%); */
+  background: #5af59d;
+  color: #2c203d;
+}
+
+.answer button.wrong {
+  /* background: linear-gradient(180deg, #f96fb1 0%, #f52b8c 100%); */
+  background: #f55a98;
+  color: #2c203d;
+}
+
 #summary {
   max-width: 40rem;
   margin: 2rem auto;
